# youtube-mpv

./: .gitignore  README.org  content-script.ts  flake.nix  package.json  service_worker.ts  tsconfig.json  youtube-mpv-native-host.cabal
.github/: nix.yml
.github/workflows/: cabal.yml  ci.yml  nix.yml
extension/: package-lock.json  package.json  tsconfig.json
extension/src/: comments.ts  content-script.ts  service-worker.ts  service_worker.ts
native-host/: CHANGELOG.md  LICENSE  Main.hs  youtube-mpv-native-host.cabal
native-host/app/: Main.hs
natvie-host/: Main.hs
